# skill-evolution

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODOS.md  pyproject.toml
.claude/commands/: bridge-monitor.md
docs/: design-meta-skill-evolution.md
docs/designs/: meta-skill-evolution.md
examples/code_review/: skill.md  tasks.txt
scripts/: bridge_auto.py  bridge_auto_respond.py  bridge_monitor.py
src/skill_evolution/: __init__.py  cli.py  config.py
src/skill_evolution/core/: __init__.py  auditor.py  changelog.py  comparator.py  explorer.py  meta_evolver.py  patcher.py  pipeline.py
src/skill_evolution/evaluation/: __init__.py  evaluator.py
src/skill_evolution/llm/: __init__.py  base.py  bridge_backend.py  claude_backend.py  cli_backend.py  factory.py  openai_backend.py
src/skill_evolution/meta_skills/: __init__.py  loader.py  skill_audit.md  skill_patch.md  strategy_generation.md  trajectory_comparison.md
src/skill_evolution/meta_skills/test_suites/: strategy_generation.jsonl  trajectory_comparison.jsonl
src/skill_evolution/runner/: __init__.py  executor.py
src/skill_evolution/skill/: __init__.py  regression_gate.py  schema.py  versioning.py
tests/: conftest.py  test_auditor.py  test_bridge_auto_respond.py  test_changelog.py  test_cli.py  test_comparator.py  test_config.py  test_evaluator.py  test_executor.py  test_explorer.py  test_llm.py  test_meta_evolver.py  test_meta_skill_loader.py  test_meta_skill_testing.py  test_patcher.py  test_pipeline_integration.py  test_regression_gate.py  test_skill_schema.py  test_versioning.py
(+4 files in other folders)
