[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skill-evolution"
version = "0.1.0"
description = "Evolve AI agent skills through iterative meta-skill-driven optimization"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Seafoodhk" },
]
keywords = ["ai", "agent", "skill", "evolution", "meta-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "anthropic>=0.30.0",
    "openai>=1.0.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
]

[project.scripts]
skill-evolution = "skill_evolution.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_evolution"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100
